--- a/src/app/pages/otheruser/otheruser.page.html
+++ b/src/app/pages/otheruser/otheruser.page.html
@@ -3,8 +3,7 @@
     <div class="profile-outer-container">
       <div class="back-button">
         <ion-buttons>
-          <!-- <backbutton slot="start"></backbutton> -->
-          <ion-icon name="arrow-back-outline" (click)="backtoPreviousPage()" class="larger-back-button"></ion-icon>
+          <backbutton slot="start" (click)="backtoPreviousPage()"></backbutton>
         </ion-buttons>
       </div>
       <div class="profile-img-container">
