stretching star custom badge

--- a/src/app/pages/search/gymsearch/gymsearch.component.scss
+++ b/src/app/pages/search/gymsearch/gymsearch.component.scss
@@ -185,7 +185,7 @@ ion-input {
 //   margin-bottom: 0px;
 // }
 
-// #distance-input {
-//     padding-bottom: 5px;
-//     padding-right: 10px;
-// }
+#distance-input input{
+    padding-bottom: 5px;
+    padding-right: 10px;
+}
