--- a/src/app/pages/search/gymsearch/gymsearch.component.html
+++ b/src/app/pages/search/gymsearch/gymsearch.component.html
@@ -30,16 +30,16 @@
 
 <ion-grid>
   <ion-row>
-    <ion-col size="10">
+    <ion-col size="9">
       <div class="search-container">
         <ion-searchbar placeholder="Gym Name" [(ngModel)]="searchTerm" (ionInput)="onSearchInput($event)" clearInput animated></ion-searchbar>
       </div>
     </ion-col>
 
-    <ion-col size="2">
+    <ion-col size="3">
       <div class="input-container">
-        <ion-input id="distance-input" type="number" [(ngModel)]="maxDistance" (ionInput)="loadData()" style="--padding-bottom: 6px;--padding-right: 20px;"></ion-input>
-        <ion-text>km</ion-text>
+        <ion-input id="distance-input" type="number" [(ngModel)]="maxDistance" (ionInput)="loadData()"></ion-input>
+        <ion-text style="--padding-bottom: 6px;padding-right: 15px;">km</ion-text>
       </div>
     </ion-col> 
   </ion-row>
@@ -95,8 +95,31 @@
               </li>
             </ul>
           </ion-card-content>
+          
+          <ion-modal #modal trigger="open-modal" [initialBreakpoint]="0.5" [breakpoints]="[0, 0.25, 0.5, 0.75]">
+            <ion-card-header class="blackText friendsHeader">
+              Friends that have workout sessions scheduled here:
+            </ion-card-header>
+            <ul class="no-bullet">
+              <li *ngFor="let friend of gym.friendsLocationInfo" (click)="viewProfile(friend.id)">
+                <div class="friend-details">
+                <img [src]="friend[0].profilePhoto" alt="Profile Photo" class="friend-photo"/>
+                <div>
+                  <p class="friendDisplayName">{{ friend[0].friendDisplayName }}</p>
+                  <ul>
+                    <li *ngFor="let gymSession of friend">
+                      <h1 class="workoutName">{{ gymSession.workoutName }}</h1>
+                      <p class="dateAndTime">{{ formatDate(gymSession.date) }}: {{ gymSession.startTime }}-{{ formatTime(gymSession.endTime) }}</p>
+                    </li>
+                  </ul>
+                </div>
+                </div>
+              </li>
+            </ul>
+          </ion-modal>
+
           <ng-template #dontShowFriends>
-            <ion-card-header class="whiteText friendsHeader showFriendsOrNot" (click)="toggleFriends(gym.place_id)">
+            <ion-card-header class="whiteText friendsHeader showFriendsOrNot" (click)="toggleFriends(gym.place_id)" trigger="open-modal">
               {{showFriends[gym.place_id] ? 'Hide' : 'Show'}} Friends Workout Sessions
             </ion-card-header>
             <ion-icon name="chevron-down-outline"></ion-icon>
