--- a/src/app/pages/otheruserbadges/badge/badge.component.html
+++ b/src/app/pages/otheruserbadges/badge/badge.component.html
@@ -2,8 +2,10 @@
   <ion-item>
     <ion-grid>
       <ion-row>
-        <ion-col size="auto">
-          <ion-img src="assets/badge0.png"></ion-img>
+        <ion-col size="auto" class="badgeSection">
+          <div style="position: relative">
+            <ion-img [src]="imageName"></ion-img>          
+          </div>
         </ion-col>
         <ion-col class="content">
           <div class="badgeHeader">{{name}}</div>
