--- a/src/app/pages/view-personalbests/personal-bests-chart/personal-bests-chart.component.html
+++ b/src/app/pages/view-personalbests/personal-bests-chart/personal-bests-chart.component.html
@@ -47,7 +47,7 @@
             <ion-card class = "chart-card" style="background-color:#A8DADC; color: black; weight:10">
 
               <ion-item-divider  style="background-color: #A8DADC; padding: 2%; border-radius: 10px; text-align: center; font-size: 1.5rem;">
-                <ion-label>Latest {{showExercise}} bests</ion-label>
+                <ion-label>Latest {{showExercise}} Bests</ion-label>
               </ion-item-divider>
 
               <ion-card-content class="max-height-card-content">
