--- a/src/app/pages/view-personalbests/view-personalbests.page.html
+++ b/src/app/pages/view-personalbests/view-personalbests.page.html
@@ -18,16 +18,31 @@
     </ion-fab>
 
     <ion-content *ngIf="showForm">
-        <ion-card>
-                <ion-item-divider  style="background-color: #A8DADC; padding: 5px">
-                    <ion-label>Add Best Details</ion-label>
-                </ion-item-divider>
 
-                <form [formGroup]="PersonalBestForm" (ngSubmit)="onSubmit()" >
+        <ion-card style="background-color: #A8DADC; padding: 5px; display: flex; flex-direction: column; align-items: center; justify-content: center; text-align: center;">
+            <ion-grid>
+                <ion-row>
+                    <ion-col>
+                        <ion-card-title>Add Personal best</ion-card-title>
+                    </ion-col>
+                </ion-row>
+                <ion-row>
+                    <ion-col>
+                        <ion-card>
+<!--                            Todo: Change the image-->
+                            <ion-img src="../../../assets/goalsBanner.jpg"></ion-img>
+                        </ion-card>
+                    </ion-col>
+                </ion-row>
+            </ion-grid>
+        </ion-card>
+
+
+        <form [formGroup]="PersonalBestForm" (ngSubmit)="onSubmit()" >
 
                     <ion-item>
                         <ion-label>Select Exercise</ion-label>
-                            <ion-select formControlName="exercise" placeholder="exercise">
+                            <ion-select formControlName="exercise" placeholder="EXERCISE">
                                 <ion-select-option value="Bench Press">Bench Press</ion-select-option>
                                 <ion-select-option value="Squats">Squats</ion-select-option>
                                 <ion-select-option value="Deadlifts">Deadlifts</ion-select-option>
@@ -67,7 +82,7 @@
                     </ion-item>
                         <ion-button type="submit" expand="full" [disabled]="!isValid(PersonalBestForm.value)"><ion-icon slot="start" name="checkmark"></ion-icon>Submit</ion-button>
                 </form>
-        </ion-card>
+
     </ion-content>
 
   
