--- a/src/app/pages/view-personalbests/personal-bests-chart/personal-bests-chart.component.html
+++ b/src/app/pages/view-personalbests/personal-bests-chart/personal-bests-chart.component.html
@@ -2,62 +2,87 @@
 
 
 
-<ion-card class = "chart-card" style="background-color:#A8DADC; color: black; weight:10">
+<ion-card>
   <ion-item-divider  style="background-color: #A8DADC; padding: 2%; border-radius: 10px; text-align: center; font-size: 1.5rem;">
     <ion-label>Progress Chart</ion-label>
   </ion-item-divider>
 
-  <ion-row>
-      <ion-col>
-        <ion-label>Exercise</ion-label>
+  <ion-grid style=" color: #000000;">
+    <ion-row class="ion-align-items-center ion-justify-content-center"> <!-- Center content vertically and horizontally -->
+      <ion-col size="6">
+        <ion-row class="ion-align-items-center ion-justify-content-center"> <!-- Center content vertically and horizontally -->
+          <ion-label>Exercise</ion-label>
+        </ion-row>
       </ion-col>
 
-      <ion-col>
-        <ion-select [(ngModel)]="showExercise" (ionChange)="handleExerciseChange($event)">
-          <ion-select-option value="Bench Press">Bench Press</ion-select-option>
-          <ion-select-option value="Squats">Squats</ion-select-option>
-          <ion-select-option value="Deadlifts">Deadlifts</ion-select-option>
-          <ion-select-option value="Overhead Press">Overhead Press</ion-select-option>
-          <ion-select-option value="Barbell Rows">Barbell Rows</ion-select-option>
-          <ion-select-option value="Push ups">Push ups</ion-select-option>
-        </ion-select>
+      <ion-col size="6">
+        <ion-row class="ion-align-items-center ion-justify-content-center"> <!-- Center content vertically and horizontally -->
+          <ion-select [(ngModel)]="showExercise" (ionChange)="handleExerciseChange($event)">
+            <ion-select-option value="Bench Press">Bench Press</ion-select-option>
+            <ion-select-option value="Squats">Squats</ion-select-option>
+            <ion-select-option value="Deadlifts">Deadlifts</ion-select-option>
+            <ion-select-option value="Overhead Press">Overhead Press</ion-select-option>
+            <ion-select-option value="Barbell Rows">Barbell Rows</ion-select-option>
+            <ion-select-option value="Push ups">Push ups</ion-select-option>
+          </ion-select>
+        </ion-row>
       </ion-col>
-  </ion-row>
+    </ion-row>
+  </ion-grid>
 
-    <ion-radio-group [(ngModel)]="showReps" (ionChange)="handleRadioChange($event)">
-      <ion-row>
-        <ion-col>
-          <ion-radio class="radioButton" name = "radioButton" value="reps"><ion-label>Reps</ion-label></ion-radio>
-        </ion-col>
-        <ion-col>
-          <ion-radio class="radioButton" name = "radioButton" value="weight"><ion-label>Weight (kg)</ion-label></ion-radio>
-        </ion-col>
-      </ion-row>
-    </ion-radio-group>
 
-  <canvas baseChart
-          *ngIf="chartData.length > 0"
-          [datasets]="chartData"
-          [labels]="chartLabels"
-          [options]="chartOptions"
-          [type]="chartType">
-  </canvas>
+
+
+  <ion-radio-group value="custom-checked" [(ngModel)]="showReps" (ionChange)="handleRadioChange($event)">
+    <ion-row>
+      <ion-col size="6">
+        <ion-row class="ion-align-items-center ion-justify-content-center">
+          <ion-label>Repetitions</ion-label>
+        </ion-row>
+        <ion-row class="ion-align-items-center ion-justify-content-center">
+          <ion-radio class="radioButton" name="radioButton" value="reps"></ion-radio>
+        </ion-row>
+      </ion-col>
+
+      <ion-col size="6">
+        <ion-row class="ion-align-items-center ion-justify-content-center">
+          <ion-label>Weight (kg)</ion-label>
+        </ion-row>
+        <ion-row class="ion-align-items-center ion-justify-content-center">
+          <ion-radio class="radioButton" name="radioButton" value="weight"></ion-radio>
+        </ion-row>
+      </ion-col>
+    </ion-row>
+  </ion-radio-group>
+
 </ion-card>
 
-            <ion-card class = "chart-card" style="background-color:#A8DADC; color: black; weight:10">
+  <ion-card class = "chart-card " style="background-color:#A8DADC; color: black; weight:10">
+  <ion-card-subtitle class = "max-height-card-content-chart">
+    <canvas baseChart
+            *ngIf="chartData.length > 0"
+            [datasets]="chartData"
+            [labels]="chartLabels"
+            [options]="chartOptions"
+            [type]="chartType">
+    </canvas>
+  </ion-card-subtitle>
 
-              <ion-item-divider  style="background-color: #A8DADC; padding: 2%; border-radius: 10px; text-align: center; font-size: 1.5rem;">
-                <ion-label>Latest {{showExercise}} Bests</ion-label>
-              </ion-item-divider>
+</ion-card>
+
+<ion-card>
+      <ion-item-divider  style="background-color: #A8DADC; padding: 2%; border-radius: 10px; text-align: center; font-size: 1.5rem;">
+        <ion-label>Latest {{showExercise}} Bests</ion-label>
+      </ion-item-divider>
 
               <ion-card-content class="max-height-card-content">
 
                   <ion-item-sliding *ngFor="let personalBest of personalBestsData">
-                    <ion-item clsss = "chart-card" style="background-color:#A8DADC; color: black; weight:10">
+                    <ion-item clsss = "chart-card" style="background-color:#A8DADC; color: black; weight:10" lines="none">
 
                       <ion-label>
                         <h2>{{ personalBest.location }}</h2>
-                        <p>{{ personalBest.date }}</p>
+                        <p>{{ personalBest.date | date:'dd-MMM-yyyy' }}</p>
                       </ion-label>
 
                       <ion-note slot="end" color="black">
@@ -74,4 +99,4 @@
                   </ion-item-sliding>
 
               </ion-card-content>
-          </ion-card>
+</ion-card>
