points ui improvements

--- a/src/app/pages/points/points.page.html
+++ b/src/app/pages/points/points.page.html
@@ -31,7 +31,8 @@
         <ion-img src="assets/sweatSessionPoint.png" class = "wpPointsImg"></ion-img>
       </span>
     </ion-item>
-    <ion-button routerLink="/workout-tracking">View Workout Plan</ion-button>
+    <ion-button routerLink="/workout-scheduling">View Workout Plan</ion-button>
+    <!-- <ion-button routerLink="/workout-tracking">View Workout Plan</ion-button>  maybe change it to personal bests-->
     </ion-item>
 
 
