--- a/src/app/pages/search/gymsearch/gymsearch.component.html
+++ b/src/app/pages/search/gymsearch/gymsearch.component.html
@@ -119,7 +119,8 @@
           </ion-modal>
 
           <ng-template #dontShowFriends>
-            <ion-card-header class="whiteText friendsHeader showFriendsOrNot" (click)="toggleFriends(gym.place_id)" trigger="open-modal">
+            <ion-card-header class="whiteText friendsHeader showFriendsOrNot" (click)="modal.present()">
+              <!-- ; toggleFriends(gym.place_id) -->
               {{showFriends[gym.place_id] ? 'Hide' : 'Show'}} Friends Workout Sessions
             </ion-card-header>
             <ion-icon name="chevron-down-outline"></ion-icon>
