--- a/src/app/pages/workout-scheduling/edit-schedule/edit-schedule.component.scss
+++ b/src/app/pages/workout-scheduling/edit-schedule/edit-schedule.component.scss
@@ -9,4 +9,12 @@
     /* Same width as built-in calendar icon */
     font-size: 20px !important;
     margin-top: 20px;
+    padding-left: 0%;
 }
+
+// .location-item ion-input {
+//     width: 80%;
+//   }
+.location-item {
+    width: 90%;
+  }
