--- a/src/app/pages/workout-scheduling/schedulecontent/schedule-content.component.html
+++ b/src/app/pages/workout-scheduling/schedulecontent/schedule-content.component.html
@@ -56,15 +56,15 @@
   <ng-template>
     <ion-header>
       <ion-toolbar>
-        <!-- <ion-buttons slot="start">
+        <ion-buttons slot="start">
           <ion-button slot="start" fill="outline" (click)="modal.dismiss()">Cancel</ion-button>
-        </ion-buttons> -->
-        <ion-button slot="start" fill="outline" (click)="modal.dismiss()">Cancel</ion-button>
+        </ion-buttons>
+        <!-- <ion-button slot="start" fill="outline" (click)="modal.dismiss()">Cancel</ion-button> -->
         <ion-title class="add-friends-title">Select Friends</ion-title>
-        <!-- <ion-buttons slot="end">
+        <ion-buttons slot="end">
           <ion-button fill="outline" (click)="confirmSelection()">Confirm</ion-button>
-        </ion-buttons> -->
-        <ion-button slot="end" fill="outline" (click)="confirmSelection()">Confirm</ion-button>
+        </ion-buttons>
+        <!-- <ion-button slot="end" fill="outline" (click)="confirmSelection()">Confirm</ion-button> -->
       </ion-toolbar>
     </ion-header>
     <ion-content>
