--- a/src/app/pages/workout-scheduling/add-schedule/add-schedule.component.html
+++ b/src/app/pages/workout-scheduling/add-schedule/add-schedule.component.html
@@ -10,26 +10,36 @@
   <ion-grid>
     <ion-row>
       <ion-col>
+        <div>
         <ion-item>
-          <ion-label position="stacked">Time</ion-label>
+          <br>
+          <ion-label position="stacked" style="font-size:x-large">Time</ion-label>
           <ion-input type="time" [(ngModel)]="schedule.time" [min]="getMinTime()"></ion-input>
+          <br>
         </ion-item>
+      </div>
       </ion-col>
     </ion-row>
     <ion-row>
       <ion-col>
+        <div>
         <ion-item>
-          <ion-label position="stacked">Date</ion-label>
+          <br>
+          <ion-label position="stacked" style="font-size:x-large">Date</ion-label>
           <ion-input type="date" [(ngModel)]="schedule.date" [min]="getMinDate()"></ion-input>
+          <br>
         </ion-item>
+      </div>
       </ion-col>
     </ion-row>        
     <ion-row>
       <ion-col>
         <div class="location-container">
-          <ion-item class="location-item">   
-            <ion-label position="stacked">Location</ion-label>  
-            <ion-input type="text" [(ngModel)]="schedule.location" placeholder="Click on the location icon"></ion-input>      
+          <ion-item class="location-item">  
+            <br> 
+            <ion-label position="stacked" style="font-size:x-large">Location</ion-label>  
+            <ion-input type="text" [(ngModel)]="schedule.location" placeholder="Click on the location icon"></ion-input> 
+            <br>     
           </ion-item>
           <ion-icon name="location" slot="end" (click)="openLocationModal()" class="location-icon"></ion-icon>
         </div>
@@ -38,21 +48,27 @@
     <ion-row>
       <ion-col>
         <ion-item>
-          <ion-label position="floating">Duration (min)</ion-label>
+          <br>
+          <ion-label position="floating" style="font-size:x-large">Duration (min)</ion-label>
           <ion-input type="number" [(ngModel)]="schedule.duration" [min]="10"></ion-input>
+          <br>
         </ion-item>
       </ion-col>
     </ion-row>
     <ion-row>
       <ion-col>
         <ion-item>
-          <ion-label position="floating">Workout Name</ion-label>
+          <br>
+          <ion-label position="floating" style="font-size:x-large">Workout Name</ion-label>
           <ion-input type="text" [(ngModel)]="schedule.name" autofocus="false"></ion-input>
+          <br>
         </ion-item>
       </ion-col>
     </ion-row>
     <ion-row>
       <ion-col>
+        
+          <br>
         <ion-button expand="block" (click)="addSchedule()" [disabled]="!isValidInput()">Save</ion-button>
       </ion-col>
     </ion-row>
