--- a/src/app/pages/healthdata/healthdata.page.html
+++ b/src/app/pages/healthdata/healthdata.page.html
@@ -12,9 +12,9 @@
     <ion-spinner></ion-spinner>
   </div>
 
-  <div class="icon-container">
+  <div class="icon-container" [class.heart-beat]="isBeating">
     <ion-icon name="heart" class="health-icon"></ion-icon>
-  </div>
+  </div>  
   <ion-text class="subtext">Enter all your health data here for catered results</ion-text>
 
   <form [formGroup]="healthDataForm" *ngIf="!isLoading" (ngSubmit)="saveHealthData()">
@@ -58,7 +58,7 @@
       </ion-item>
       
       <ion-item>
-        <ion-button class="submit" expand="full" type="submit" [disabled]="!healthDataForm.valid">Submit</ion-button>
+        <ion-button class="submit" expand="full" type="submit" [disabled]="!healthDataForm.valid" (click)="startBeating()">Submit</ion-button>
       </ion-item>
     </ion-list>
   </form>
