--- a/src/app/pages/workout-scheduling/schedulecontent/schedule-content.component.html
+++ b/src/app/pages/workout-scheduling/schedulecontent/schedule-content.component.html
@@ -44,15 +44,12 @@
       <ion-label>{{timeLeft()}}</ion-label>
       <ion-icon name="checkmark-done-outline" slot="end" [ngClass]="{'active': joined(), 'inactive': !joined()}"></ion-icon>
       <ion-icon name="add-circle" slot="end" [id]="id" class="add-icon"></ion-icon>
-      <!-- <ion-button slot="end" [id]="id">
-        <ion-icon name="add"></ion-icon>
-      </ion-button> -->
     </ion-item>
     <ion-progress-bar [value]="ratio"></ion-progress-bar>
   </div>
 </ion-card>
 
-<ion-modal #modal [trigger]="id" [initialBreakpoint]="0.5" [breakpoints]="[0, 0.25, 0.5, 0.75, 1]">
+<ion-modal #modal [trigger]="id" [initialBreakpoint]="0.5" [breakpoints]="[0, 0.25, 0.5, 0.75]">
   <ng-template>
     <ion-header>
       <ion-toolbar>
@@ -60,7 +57,7 @@
           <ion-button slot="start" fill="outline" (click)="modal.dismiss()">Cancel</ion-button>
         </ion-buttons>
         <!-- <ion-button slot="start" fill="outline" (click)="modal.dismiss()">Cancel</ion-button> -->
-        <ion-title class="add-friends-title">Select Friends</ion-title>
+        <ion-title class="add-friends-title">{{"Select Friends"}}</ion-title>
         <ion-buttons slot="end">
           <ion-button fill="outline" (click)="confirmSelection()">Confirm</ion-button>
         </ion-buttons>
@@ -70,15 +67,15 @@
     <ion-content>
       <ion-searchbar placeholder="Search" (click)="modal.setCurrentBreakpoint(0.75)"></ion-searchbar>
       <ion-list class="transparent-list">
-        <ion-item lines="none" *ngFor="let n of [1,2,3,4,5,6,7,8,9,9]" >
-          <ion-checkbox [(ngModel)]="selectedFriends[n]" labelPlacement="end" justify="start">
+        <ion-item lines="none" *ngFor="let friend of friends; let i=index" >
+          <ion-checkbox [(ngModel)]="selectedFriends[i]" labelPlacement="end" justify="start">
             <ion-item class="transparent-item" lines="none">
               <ion-avatar slot="start">
-                <ion-img src="https://ionicframework.com/docs/img/demos/avatar.svg"></ion-img>
+                <ion-img [src]="friend.profileURL"></ion-img>
               </ion-avatar>
               <ion-label>
-                <h2>name</h2>
-                <p>bio</p>
+                <h2>{{friend.displayName}}</h2>
+                <p>{{friend.bio}}</p>
               </ion-label>
             </ion-item>
           </ion-checkbox>
