--- a/src/app/pages/workout-scheduling/edit-schedule/edit-schedule.component.html
+++ b/src/app/pages/workout-scheduling/edit-schedule/edit-schedule.component.html
@@ -29,7 +29,7 @@
   <div class="location-container">
     <ion-item class="location-item">   
       <ion-label position="stacked">Location</ion-label>  
-      <ion-input type="text" formcontrolname="location" placeholder="Click on the location icon"></ion-input>      
+      <ion-input type="text" [(ngModel)]="schedule.location" placeholder="Click on the location icon"></ion-input>      
     </ion-item>
   
     <ion-icon name="location" slot="end" class="location-icon" (click)="openLocationModal()"></ion-icon>
