--- a/src/app/pages/badges/badge/badge.component.html
+++ b/src/app/pages/badges/badge/badge.component.html
@@ -7,7 +7,7 @@
 
             <ion-img [src]="imageName"></ion-img>
           
-            <ion-img *ngIf="!received" src="assets/lock.png" style="position: absolute; top: 5px; left: 8.5px; width: 80%; height: 80%"></ion-img>
+            <ion-img *ngIf="!received" src="assets/lock.png" style="position: absolute; top: 10%; left: 17px; width: 50px; height: 50px"></ion-img>
           
           </div>
         </ion-col>
