--- a/src/app/pages/search/gymsearch/gymsearch.component.html
+++ b/src/app/pages/search/gymsearch/gymsearch.component.html
@@ -115,10 +115,14 @@
                       <p class="friendDisplayName">{{ friend[0].friendDisplayName }}</p>
                       <ul>
                         <li *ngFor="let gymSession of friend">
-                          <h1 class="workoutName">{{ gymSession.workoutName }}</h1>
-                          <p class="dateAndTime">{{ formatDate(gymSession.date) }}</p>
-                          <p class="dateAndTime" style="margin-top: -10px;">{{ gymSession.startTime }}-{{ formatTime(gymSession.endTime) }}</p>
-                          <ion-button style="--background: #A8DADC; --color: black;">Join Session</ion-button>
+                          <h1 class="workoutName" style="margin-bottom: 0;">{{ gymSession.workoutName }}</h1>
+                          <div style="display: flex; ">
+                            <div style="margin-right: 8px;">
+                              <p class="dateAndTime">{{ formatDate(gymSession.date) }}</p>
+                              <p class="dateAndTime" style="margin-top: -10px;">{{ gymSession.startTime }}-{{ formatTime(gymSession.endTime) }}</p>
+                            </div>
+                            <ion-button style="--background: #A8DADC; --color: black; margin: auto; padding-right: 10px;">Join <br>Session</ion-button>
+                          </div>
                         </li>
                       </ul>
                     </div>
