--- a/src/app/pages/workout-tracking/workout-tracking.page.html
+++ b/src/app/pages/workout-tracking/workout-tracking.page.html
@@ -8,6 +8,10 @@
     </ion-toolbar>
   </ion-header>
 
+  <div class="image-container">
+    <img src="../../../assets/Asset 2.png" alt="Image" class="centered-image"/>
+  </div>
+
   <div class="heading-container">
     <h2>Customize your workout plan here</h2>
   </div>
@@ -28,11 +32,11 @@
           </ion-button>
         </div>
 
-        <ion-button color="success" type="button" (click)="addExercise()" [disabled]="exercises.length >= 10">
+        <ion-button class="adder" type="button" (click)="addExercise()" [disabled]="exercises.length >= 10">
           <ion-icon name="add"></ion-icon>
         </ion-button>
       </form>
-      <ion-button color="primary" type="button" (click)="saveExercises()">
+      <ion-button class="submit" type="button" (click)="saveExercises()">
         Save Exercises
       </ion-button>
     </div>
