--- a/src/app/pages/dashboard/dashboard.page.html
+++ b/src/app/pages/dashboard/dashboard.page.html
@@ -149,7 +149,7 @@
                   <ion-card-title>
                     <ion-icon name="barbell-outline"></ion-icon>
                   </ion-card-title>
-                 Gyms
+                 People
                  </ion-card-content>
                 </ion-card>
               </ion-col>
