--- a/src/app/pages/home/home.page.html
+++ b/src/app/pages/home/home.page.html
@@ -78,7 +78,7 @@
     </ion-tab-button>
     <ion-tab-button tab="chatbot">
       <ion-icon name="logo-ionitron"></ion-icon>
-      chat bot
+      Chatbot
     </ion-tab-button>
   </ion-tab-bar>
 </ion-tabs>
