--- a/src/app/pages/settings/settings.page.html
+++ b/src/app/pages/settings/settings.page.html
@@ -2,7 +2,7 @@
   <ion-toolbar>
     <ion-item lines="none">
       <backbutton></backbutton>
-      <ion-title>settings</ion-title>
+      <ion-title>Settings</ion-title>
     </ion-item>
   </ion-toolbar>
 </ion-header>
