--- a/src/app/pages/notifications/notifications.page.html
+++ b/src/app/pages/notifications/notifications.page.html
@@ -36,7 +36,7 @@
         <ion-button color="success" size="small" (click)="addFriend(notice)">Accept</ion-button>
         <ion-button color="danger" size="small" (click)="clearNotification(notice.id!); rejectFriendRequest(notice , notice.senderid! , notice.senttoid!);">Reject</ion-button>
       </div>
-      <ion-label class="right-align-label">{{notice.sentdate }}</ion-label>
+      <ion-label class="right-align-label" style="margin-bottom: 5px;margin-right: 5px;">{{notice.sentdate }}</ion-label>
     </ion-card>
   </div>
   <br>
